# python-project-49

./: .gitignore  Makefile  README.md  brain-even.cast  brain-gcd.cast  pyproject.toml
brain_games/: basic_logic.py  cli.py  constants.py  engine_logic.py  parity_check.py
brain_games/games/: calc.py  calc_logic.py  even.py  even_logic.py  gcd.py  gcd_logic.py  prime.py  prime_logic.py  progression.py  progression_logic.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_games_.py  brain_gcd.py  brain_prime.py  brain_progression.py
cast/: brain-calc.cast  brain-prime.cast  brain-progression.cast
